# ifor_iarc7_sim_roslaunch

./: CMakeLists.txt  README.md  package.xml
launch/: first.launch  obj.launch  obstacle.launch
sdf/: model.sdf  obstacle.sdf
src/: ContactPlugin.cc  ContactPlugin.hh  groundbot.cpp  groundbot.py  obsti.py
worlds/: ifor_iarc_ground.world
